fix(core): set placeholder opacity so each browser is aligned (#417)
Firefox has a reduced opacity set for placeholders.

--- a/packages/core/src/mixins/as-text-input.scss
+++ b/packages/core/src/mixins/as-text-input.scss
@@ -16,6 +16,7 @@
 
   &::placeholder {
     color: helpers.color('content-placeholder');
+    opacity: 1; // Firefox has reduced opacity
   }
 
   &:hover {
